--- a/ShoppingProject/App.config
+++ b/ShoppingProject/App.config
@@ -2,5 +2,8 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
+		<PropertyGroup>
+			<PublishSingleFile>true</PublishSingleFile>
+		</PropertyGroup>
     </startup>
 </configuration>
